--- a/src/med/view/RootLayout.fxml
+++ b/src/med/view/RootLayout.fxml
@@ -45,7 +45,7 @@
                               <Insets />
                            </HBox.margin>
                         </Label>
-                        <ChoiceBox fx:id="categoryBox" layoutX="85.0" layoutY="23.0" prefHeight="25.0" prefWidth="195.0" />
+                        <ChoiceBox fx:id="categoryBox" layoutX="85.0" layoutY="23.0" prefHeight="25.0" prefWidth="200.0" />
                      </children>
                   </HBox>
                   <HBox layoutX="27.0" layoutY="60.0" spacing="10.0">
@@ -74,7 +74,7 @@
                               <Insets right="10.0" />
                            </HBox.margin>
                         </Label>
-                        <GridPane fx:id="complaintPain" layoutX="297.0" layoutY="96.0" prefHeight="28.0" prefWidth="167.0">
+                        <GridPane fx:id="complaintPain" layoutX="297.0" layoutY="96.0" prefHeight="34.0" prefWidth="167.0">
                           <columnConstraints>
                             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                           </columnConstraints>
@@ -110,6 +110,34 @@
                         <TextField fx:id="consciousText" layoutX="225.0" layoutY="267.0" />
                         <Label layoutX="392.0" layoutY="262.0" text="Эпиприступы" />
                         <TextField fx:id="epiText" layoutX="466.0" layoutY="258.0" />
+                     </children>
+                  </HBox>
+                  <HBox spacing="10.0">
+                     <children>
+                        <Label layoutX="34.0" layoutY="310.0" text="Эмоциональная сфера" />
+                        <ComboBox fx:id="emotionMainBox" layoutX="165.0" layoutY="306.0" prefWidth="150.0" />
+                        <GridPane fx:id="emotionPain" layoutX="324.0" layoutY="307.0" prefHeight="23.0" prefWidth="200.0">
+                          <columnConstraints>
+                            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                          </columnConstraints>
+                          <rowConstraints>
+                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                          </rowConstraints>
+                        </GridPane>
+                     </children>
+                  </HBox>
+                  <HBox spacing="10.0">
+                     <children>
+                        <Label layoutX="20.0" layoutY="343.0" text="Сон" />
+                        <ComboBox fx:id="dreamComboBox" layoutX="51.0" layoutY="339.0" prefWidth="150.0" />
+                        <GridPane fx:id="dreamPain" layoutX="215.0" layoutY="343.0" prefHeight="30.0" prefWidth="148.0">
+                          <columnConstraints>
+                            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                          </columnConstraints>
+                          <rowConstraints>
+                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                          </rowConstraints>
+                        </GridPane>
                      </children>
                   </HBox>
                </children>
