печать пробного текста

--- a/src/med/view/RootLayout.fxml
+++ b/src/med/view/RootLayout.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
 <?import javafx.scene.*?>
 <?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
@@ -15,17 +16,13 @@
                         <MenuItem mnemonicParsing="false" onAction="#handleOpen" text="Open" />
                         <MenuItem mnemonicParsing="false" onAction="#handleSave" text="Save" />
                         <MenuItem mnemonicParsing="false" onAction="#handleSaveAs" text="Save as" />
+                        <MenuItem mnemonicParsing="false" onAction="#handlePrint" text="Print"/>
                         <MenuItem mnemonicParsing="false" onAction="#handleExit" text="Exit" />
                     </items>
                 </Menu>
-                <Menu mnemonicParsing="false" text="Edit">
+                <Menu mnemonicParsing="false" text="Help">
                     <items>
-                        <MenuItem mnemonicParsing="false" text="Delete" />
-                    </items>
-                </Menu>
-                <Menu mnemonicParsing="false" onAction="#handleAbout" text="Help">
-                    <items>
-                        <MenuItem mnemonicParsing="false" text="About" />
+                        <MenuItem mnemonicParsing="false" onAction="#handleAbout" text="About"/>
                     </items>
                 </Menu>
             </menus>
