--- a/src/med/view/AddDrugsDialog.fxml
+++ b/src/med/view/AddDrugsDialog.fxml
@@ -7,27 +7,29 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="297.0"
             prefWidth="351.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="sample.PersonEditDialogController">
+            fx:controller="med.view.AddDrugDialogController">
     <children>
         <GridPane layoutX="25.0" layoutY="22.0" prefHeight="104.0" prefWidth="397.0" AnchorPane.leftAnchor="5.0"
                   AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="5.0">
             <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="209.0" minWidth="10.0" prefWidth="105.0"/>
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="292.0" minWidth="10.0" prefWidth="292.0"/>
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="209.0" minWidth="10.0" prefWidth="94.0"/>
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="292.0" minWidth="10.0" prefWidth="247.0"/>
             </columnConstraints>
             <rowConstraints>
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
             </rowConstraints>
             <children>
-                <Label text="First Name"/>
-                <Label text="Last Name" GridPane.rowIndex="1"/>
-                <Label text="Birthday" GridPane.rowIndex="2"/>
-                <TextField fx:id="firstNameField" GridPane.columnIndex="1"/>
-                <TextField fx:id="lastNameField" GridPane.columnIndex="1" GridPane.rowIndex="1"/>
-                <DatePicker fx:id="birthdayField" prefHeight="25.0" prefWidth="263.0" GridPane.columnIndex="1"
-                            GridPane.rowIndex="2"/>
+                <Label text="Название"/>
+                <Label text="Доза" GridPane.rowIndex="1"/>
+                <Label prefHeight="14.0" prefWidth="104.0" text="Дополнительно" GridPane.rowIndex="3"/>
+                <ChoiceBox fx:id="nameChoiceBox" prefHeight="25.0" prefWidth="261.0" GridPane.columnIndex="1"/>
+                <TextArea fx:id="additionalInfoArea" minHeight="-Infinity" prefHeight="47.0" prefWidth="247.0"
+                          GridPane.columnIndex="1" GridPane.rowIndex="3"/>
+                <ChoiceBox fx:id="doseChoiceBox" prefHeight="25.0" prefWidth="259.0" GridPane.columnIndex="1"
+                           GridPane.rowIndex="1"/>
             </children>
         </GridPane>
         <HBox layoutX="233.0" layoutY="355.0" prefHeight="25.0" prefWidth="135.0" AnchorPane.bottomAnchor="5.0"
